# python-sc2

./: .gitignore  .pre-commit-config.yaml  generate_dicts_from_data_json.py  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle
docs/.doctrees/bot_ai/: index.doctree
docs/.doctrees/client/: index.doctree
docs/.doctrees/game_data/: index.doctree
docs/.doctrees/game_info/: index.doctree
docs/.doctrees/game_state/: index.doctree
docs/.doctrees/ids/: index.doctree
docs/.doctrees/pixel_map/: index.doctree
docs/.doctrees/position/: index.doctree
docs/.doctrees/protocol/: index.doctree
docs/.doctrees/score/: index.doctree
docs/.doctrees/text_files/: docker.doctree  introduction.doctree
docs/.doctrees/unit/: index.doctree
docs/.doctrees/unit_command/: index.doctree
docs/.doctrees/units/: index.doctree
docs/bot_ai/: index.html
docs/client/: index.html
docs/game_data/: index.html
docs/game_info/: index.html
docs/game_state/: index.html
docs/ids/: index.html
docs/pixel_map/: index.html
docs/position/: index.html
docs/protocol/: index.html
docs/score/: index.html
docs/text_files/: docker.html  introduction.html
docs/unit/: index.html
docs/unit_command/: index.html
docs/units/: index.html
docs_generate/: conf.py
examples/: arcade_bot.py  distributed_workers.py  watch_replay.py  worker_stack_bot.py
examples/competitive/: __init__.py  bot.py
examples/protoss/: cannon_rush.py  find_adept_shades.py  threebase_voidray.py  warpgate_push.py
examples/terran/: cyclone_push.py  mass_reaper.py  onebase_battlecruiser.py  proxy_rax.py  ramp_wall.py
examples/zerg/: banes_banes_banes.py  expand_everywhere.py  hydralisk_push.py  onebase_broodlord.py  zerg_rush.py
sc2/: action.py  bot_ai.py  bot_ai_internal.py  cache.py  client.py  constants.py  controller.py  expiring_dict.py  game_data.py  game_info.py  game_state.py  generate_ids.py  main.py  maps.py  observer_ai.py  paths.py  pixel_map.py  player.py  position.py  protocol.py  proxy.py  renderer.py  sc2process.py  unit.py  unit_command.py  units.py
sc2/dicts/: __init__.py  generic_redirect_abilities.py  unit_abilities.py  unit_research_abilities.py  unit_train_build_abilities.py  unit_trained_from.py  upgrade_researched_from.py
test/: autotest_bot.py  battery_overcharge_bot.py  benchmark_distance_two_points.py  benchmark_distances_cdist.py  benchmark_distances_points_to_point.py  benchmark_distances_units.py  damagetest_bot.py  generate_pickle_files_bot.py  queries_test_bot.py  real_time_worker_production.py  run_example_bots_vs_computer.py  run_example_bots_vs_each_other.py  test_expiring_dict.py  test_pickled_data.py  test_pickled_ramp.py  travis_test_script.py  upgradestest_bot.py
